assets/css/style.css
/* ... */
.post-comments .section-title h2 {
    margin-bottom: 15px;
}
.section-title h2::before {
   /* content: "";
    position: absolute;
    left: 0;
    width: 60px;
    height: 2px;
    background: #ff5e14;
    bottom: -25px;*/
    text-align: center;
    content: "";
    position: absolute;
    left: 0;
    width: 80px;
    height: 2px;
    background: #ff5e14;
    bottom: -15px;
    right: 0;
    margin: auto;
}
.service-title h2::before {
    content: "";
    position: absolute;
    left: 0;
    width: 60px;
    height: 2px;
    background: #ff5e14;
    bottom: -25px;
    right: 0;
    margin: auto;
}

.section-title.service-title p {
    padding: 0 190px;
    margin-bottom: 10px;
}
.about-info-text h2 {
    margin-bottom: 23px;
    text-transform: capitalize;
    font-weight: 700;
    line-height: .9;
}

.jkl-home-about-info-white-text h2 {
    margin-bottom: 23px;
    padding-top: 23px;
    text-transform: capitalize;
    font-weight: 700;
    line-height: .9;
    color: white;
    position: relative;
    text-align:center;
/*     display: inline-block; */
}
.jkl-home-about-info-white-text h2:before{
     text-align: center;
    content: "";
    position: absolute;
    left: 0;
    width: 80px;
    height: 2px;
    background: #ff5e14;
    bottom: -15px;
    right: 0;
    margin: auto;
}


.about-info-text p {
    padding: 0 100px;
    font-size: 18px;
    margin-bottom: 26px;

}
.jkl-home-about-info-white-text p {
    font-size: 14px;
    margin-bottom: 26px;
    color: #f6f6f6;
    text-align: center;
}

.about-content p {
    margin-bottom: 0;
}
.jkl-home-about-info-white a {
    margin-bottom: 20px;
}
.about-info-text a {
    margin-bottom: 20px;
}
.portfolio-menu {
    line-height: 1;
}
.portfolio-wrapper {
    position: relative;
    overflow: hidden;
}
.portfolio-wrapper:hover .portfolio-thumb::before,.portfolio-wrapper:hover .portfolio-thumb::after,.portfolio-wrapper:hover .view i{
    opacity: .8;
}
.portfolio-wrapper:hover .portfolio-content{
    transform: translateY(0);
}

.features-wrap a {
    font-size: 14px;
    font-weight: 600;
    color: #ff5e14;
}

.portfolio-content p {
    color: #ffffffa3
}

.portfolio-thumb {
    position: relative;
    overflow: hidden;
}
.portfolio-thumb img {
    transition: .3s;
}

img {
    transition: .3s;
}
.portfolio-wrapper:hover .portfolio-thumb img {
    transform: rotate(3deg) scale(1.1);
}

.yoga-img-thumb img:hover {
    transition: .3s ease;
    transform: translateX(10px) scale(1.1);
}
.portfolio-thumb::before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    background: #000;
    opacity: 0;
    transition: .3s;
    z-index:9
}
.portfolio-thumb::after {
    content: "";
    position: absolute;
    left: 10px;
    right: 10px;
    top: 10px;
    bottom: 10px;
    border: 2px solid #ff5e14;
    opacity: 0;
    transition: .5s;
    z-index:99;
}

.portfolio-content {
    position: absolute;
    bottom: 30px;
    left: 0px;
    padding-left:17px;
    padding-right:17px;
    transition: .3s ease;
    z-index: 9;
    color: #fff;
    transform: translateY(160%);
    z-index:999
}
.portfolio-content h5 {
    color: #fff;
    transition: .3s;
}
.portfolio-content h5:hover a{
    color: #ff5e14;
}
.portfolio-menu button {
    padding: 0 8px;
    border: 0;
    background: none;
    color: #000;
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 600;
    cursor: pointer;
}
.portfolio-menu > button:hover, .portfolio-menu > button.active{
    color: #ff5e14;
}


.home-three-about {
    margin-top: -150px;
    background: #fff;
    position: relative;
    padding-top: 15px;
}
.jkl-home-about-img img {
    transition: .3s;
}

.jkl-home-about-img img:hover {
    transform: scale(1.1);
}

.jkl-home-card-img img {
    transition: .3s;
}

.jkl-home-card-img img:hover {
    transform: rotate(1deg) scale(1.05);
}

.jkl-home-parallex {
    position: relative;
    top: 0px;
    background-image: url("../images/home-section2-bg.jpg");
    min-height: 800px;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.jkl-extra-activity-parallex {
    position: relative;
    top: 0px;
    background-image: url("../images/student-life-section5-bg.jpg");
    min-height: 800px;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.jkl-extra-activity-parallex-infra {
    background-image: url("../images/residental-section3-bg.jpg");
}

.jkl-home-parallex-about-us {
    background-image: url("../images/about-us-section3-bg.jpg");
}
.jkl-yoga-parallex {
    background-image: url("../images/student-life-section4-bg.jpg");
}
.jkl-home-parallex::before, .jkl-extra-activity-parallex::before {
    content: "";
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background: #000;
    opacity: .5;
    z-index:0
}
.jkl-home-parallex .container-fluid, .jkl-extra-activity-parallex .container-fluid {
    z-index: 1;
}
.jkl-home-parallex .container, .jkl-extra-activity-parallex .container {
    background-color: #000000a6;
    padding-left: 40px;
    padding-right: 40px;
    z-index:1;

}

.jkl-home-updates {
    position: relative;
    top: 0px;
    min-height: 300px;

}


.jkl-home-updates::after {
    content: "";
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 130%;
    background: #000;
    opacity: .5;
    z-index:0
}
.jkl-home-updates .container-fluid {
    z-index: 2;
}


.jkl-home-updates  a:hover{
    color: #ff5e14;
}
.jkl-home-updates a {
    color: #d0d0d0;
    font-weight: 600;

}

.home-date {
    color: #ff5e14;
}

.home-update-entry {
    margin: 8px
}
.jkl-home-update-container {
    background-color: #0000006e;
    padding-top:10px;
    margin-bottom: 100px
}
/* ... */

